Improve contributors.rb plugin Validate returned data from GitHub API htmlescape data on the HTML page Drop unnecessary yaml dependency Add more comments in the code Add more aliases in _config.yml Fix vertical-align style

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -961,10 +961,11 @@ table td,table th{
 	font-size:80%;
 }
 .contributors span{
-	padding:6px 0;
+	padding:8px 0;
 	width:170px;
 	overflow:hidden;
 	display:inline-block;
+	vertical-align:top;
 }
 
 .resources{
